# slide-data-collector

./: .gitignore  README.md  config.yaml  pyproject.toml
collector/: __init__.py  cli.py  excel.py  report.py  s3.py  schema.py  validator.py
schemas/: donor.yaml  imaging.yaml  sample.yaml  slide.yaml
tests/: test_validator.py
