[project]
name = "slide-data-collector"
version = "0.1.0"
description = "A lightweight (meta)data collection system for clinical slide imaging workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
collector = "collector.cli:main"

[tool.setuptools.packages.find]
include = ["collector*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
